MDR-160, MDR-178, MDR-179